Updated version of keycloak-theme

--- a/keycloak/dissco-theme/login/messages/messages_en.properties
+++ b/keycloak/dissco-theme/login/messages/messages_en.properties
@@ -1,3 +1,4 @@
 loginAccountTitle=Choose your academic or social account
-loginTitleHtml=Sign in
+loginTitleHtml=How do you want to login?
 loginTitle=DiSSCo login
+socialProvidersItemText=Continue with
