Added a missing value and missing class

--- a/keycloak/dissco-theme/login/messages/messages_en.properties
+++ b/keycloak/dissco-theme/login/messages/messages_en.properties
@@ -2,3 +2,4 @@ loginAccountTitle=Choose your academic or social account
 loginTitleHtml=How do you want to login?
 loginTitle=DiSSCo login
 socialProvidersItemText=Continue with
+loginIdpReviewProfileTitle=Please fill in the following info
