New updated version with logo, styles and messages

--- a/keycloak/dissco-theme/login/messages/messages_en.properties
+++ b/keycloak/dissco-theme/login/messages/messages_en.properties
@@ -1,1 +1,3 @@
-loginAccountTitle=something
+loginAccountTitle=Choose your academic or social provider
+loginTitleHtml=How do you want to login?
+loginTitle=DiSSCo login
