--- a/keycloak/dissco-theme/login/messages/messages_en.properties
+++ b/keycloak/dissco-theme/login/messages/messages_en.properties
@@ -1,4 +1,9 @@
 loginAccountTitle=Choose your academic or social provider
-loginTitleHtml=How do you want to login?
+loginTitleHtml=Login
 loginTitle=DiSSCo login
 loginIdpReviewProfileTitle=Please review your profile
+doSubmit=Submit
+lastName=Last name
+firstName=First name
+username=Username
+email=Email address
