feat: Adjusted text and styling, added orcid logo

--- a/keycloak/dissco-theme/login/messages/messages_en.properties
+++ b/keycloak/dissco-theme/login/messages/messages_en.properties
@@ -1,4 +1,4 @@
-loginAccountTitle=Choose your academic or social provider
+loginAccountTitle=Please login with your Orcid
 loginTitleHtml=Login
 loginTitle=DiSSCo login
 loginReviewProfileTitle=Please review your profile
